--- a/css/main.css
+++ b/css/main.css
@@ -44,9 +44,14 @@ body {
 #form {
     display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
     width: 100%;
     gap: 10px;
+}
+
+.task-input {
+    flex: 1;
+    min-width: 0;
 }
 
 .button-add-task:hover {
@@ -124,7 +129,7 @@ body {
     }
     
     .add-task {
-        width: 60%;
+        width: 70%;
         margin: 10px auto;
     }
 
